--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
 		"format": "biome format",
 		"lint": "biome lint",
 		"prestart": "pnpm build",
-		"start": "node ./dist/index.js"
+		"start": "node ./dist/index.js",
+		"test": "vitest run",
+		"test:watch": "vitest watch"
 	},
 	"license": "MIT",
 	"packageManager": "pnpm@10.12.4",
 	"devDependencies": {
 		"@biomejs/biome": "2.0.6",
-		"typescript": "^5.8.3"
+		"typescript": "^5.8.3",
+		"vitest": "^3.2.4"
 	}
 }
