--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Build
       run: pnpm run build
     - name: Upload dist
-      if: github.base_ref == 'main'
+      if: github.event.pull_request.base.ref == 'main'
       uses: actions/upload-artifact@v4
       with:
         name: latest-sample-biomejs-ci
