--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,6 +28,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"
     - name: Install pnpm
       uses: pnpm/action-setup@v4
       # with:
