--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,12 +47,11 @@ jobs:
       run: pnpm install
     - name: Build
       run: pnpm run build
-    - name: Upload dist
-      if: github.event.pull_request.base.ref == 'main'
-      uses: actions/upload-artifact@v4
-      with:
-        name: latest-sample-biomejs-ci
-        path: dist
-        retention-days: 14
+    # - name: Upload dist
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: latest-sample-biomejs-ci
+    #     path: dist
+    #     retention-days: 14
     - name: Test
       run: pnpm run test
