--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,11 +47,12 @@ jobs:
       run: pnpm install
     - name: Build
       run: pnpm run build
-    # - name: Upload dist
-    #   uses: actions/upload-artifact@v4
-    #   with:
-    #     name: latest-sample-biomejs-ci
-    #     path: dist
-    #     retention-days: 14
+    - name: Upload dist
+      if: github.base_ref == 'main'
+      uses: actions/upload-artifact@v4
+      with:
+        name: latest-sample-biomejs-ci
+        path: dist
+        retention-days: 14
     - name: Test
       run: pnpm run test
