--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,6 +28,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"
     - name: Install pnpm
       uses: pnpm/action-setup@v4
       # with:
@@ -44,7 +48,7 @@ jobs:
     - name: Build
       run: pnpm run build
     - name: Upload dist
-      if: github.event.pull_request.base.ref == 'main'
+      if: github.base_ref == 'main'
       uses: actions/upload-artifact@v4
       with:
         name: latest-sample-biomejs-ci
