--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,6 +8,7 @@ on:
     branches: ['main']
   pull_request:
     branches:
+      - 'main'
       - 'bugfix/**'
       - 'feature/**'
       - 'hotfix/**'
@@ -48,7 +49,7 @@ jobs:
     - name: Build
       run: pnpm run build
     - name: Upload dist
-      if: github.base_ref == 'main'
+      if: github.event_name == 'push' && github.ref_name == 'main'
       uses: actions/upload-artifact@v4
       with:
         name: latest-sample-biomejs-ci
