--- a/.github/workflows/pr-lint-build-test.yml
+++ b/.github/workflows/pr-lint-build-test.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: ci-with-nodejs
+name: Pull Request - Lint, Build and Test
 
 on:
   push:
@@ -29,7 +29,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Dump GitHub context
+    - name: Log GitHub context
       env:
         GITHUB_CONTEXT: ${{ toJson(github) }}
       run: echo "$GITHUB_CONTEXT"
@@ -46,6 +46,8 @@ jobs:
     # https://pnpm.io/cli/install#--frozen-lockfile
     - name: Install dependencies
       run: pnpm install
+    - name: Lint
+      run: pnpm run lint
     - name: Build
       run: pnpm run build
     - name: Upload dist
