ci: attempt to fix invalid tag

--- a/.github/workflows/pr-lint-build-test.yml
+++ b/.github/workflows/pr-lint-build-test.yml
@@ -50,17 +50,17 @@ jobs:
     - name: Install dependencies
       run: pnpm install
     - name: Lint
-      if: !env.isMainMerge
+      if: ${{ !env.isMainMerge }}
       run: pnpm run lint
     - name: Build
       run: pnpm run build
     - name: Upload dist
-      if: env.isMainMerge
+      if: ${{ env.isMainMerge }}
       uses: actions/upload-artifact@v4
       with:
         name: latest-sample-biomejs-ci
         path: dist
         retention-days: 14
     - name: Test
-      if: !env.isMainMerge
+      if: ${{ !env.isMainMerge }}
       run: pnpm run test
