ci: log new env result 2

--- a/.github/workflows/pr-lint-build-test.yml
+++ b/.github/workflows/pr-lint-build-test.yml
@@ -17,13 +17,14 @@ on:
     paths-ignore:
       - 'README.md'
 
+env:
+  isMainMerge: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
+
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
-    env:
-      isMainMerge: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
     strategy:
       matrix:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
@@ -50,17 +51,17 @@ jobs:
     - name: Install dependencies
       run: pnpm install
     - name: Lint
-      if: ${{ !env.isMainMerge }}
+      if: ${{ env.isMainMerge == false }}
       run: pnpm run lint
     - name: Build
       run: pnpm run build
     - name: Upload dist
-      if: ${{ env.isMainMerge }}
+      if: ${{ env.isMainMerge == true }}
       uses: actions/upload-artifact@v4
       with:
         name: latest-sample-biomejs-ci
         path: dist
         retention-days: 14
     - name: Test
-      if: ${{ !env.isMainMerge }}
+      if: ${{ env.isMainMerge == false }}
       run: pnpm run test
