--- a/.github/workflows/pr-lint-build-test.yml
+++ b/.github/workflows/pr-lint-build-test.yml
@@ -17,6 +17,10 @@ on:
     paths-ignore:
       - 'README.md'
 
+env:
+  # Evaluates to string 'true' or 'false'
+  isMainMerge: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
+
 jobs:
   build:
 
@@ -47,15 +51,17 @@ jobs:
     - name: Install dependencies
       run: pnpm install
     - name: Lint
+      if: env.isMainMerge == 'false'
       run: pnpm run lint
     - name: Build
       run: pnpm run build
     - name: Upload dist
-      if: github.event_name == 'push' && github.ref_name == 'main'
+      if: env.isMainMerge == 'true'
       uses: actions/upload-artifact@v4
       with:
         name: latest-sample-biomejs-ci
         path: dist
         retention-days: 14
     - name: Test
+      if: env.isMainMerge == 'false'
       run: pnpm run test
