feat: add new lint command
- This will only check for staged files.

- Used by the git pre-commit hook.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"build": "tsc -p .",
 		"format": "biome format",
 		"lint": "biome lint",
+		"lint:staged": "biome lint --staged",
 		"prestart": "pnpm build",
 		"start": "node ./dist/index.js",
 		"test": "vitest run",
