feat: add .githooks folder
- Add npm script to change git hooks directory to the `.githooks` folder after install dependencies.

- Filename inside `.githooks` folder must match the ones in the `.git/hooks` folder.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"format": "biome format",
 		"lint": "biome lint",
 		"lint:staged": "biome lint --staged",
+		"postinstall": "git config core.hooksPath ./.githooks",
 		"prestart": "pnpm build",
 		"start": "node ./dist/index.js",
 		"test": "vitest run",
