Feature/git hook (#10)
* feat: add new lint command

- This will only check for staged files.

- Used by the git pre-commit hook.

* feat: add .githooks folder

- Add npm script to change git hooks directory to the `.githooks` folder after install dependencies.

- Filename inside `.githooks` folder must match the ones in the `.git/hooks` folder.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 		"build": "tsc -p .",
 		"format": "biome format",
 		"lint": "biome lint",
+		"lint:staged": "biome lint --staged",
+		"postinstall": "git config core.hooksPath ./.githooks",
 		"prestart": "pnpm build",
 		"start": "node ./dist/index.js",
 		"test": "vitest run",
