ci: rename test step

--- a/.github/workflows/pr-lint-build-test.yml
+++ b/.github/workflows/pr-lint-build-test.yml
@@ -60,6 +60,6 @@ jobs:
         name: latest-sample-biomejs-ci
         path: dist
         retention-days: 14
-    - name: Test
+    - name: Unit test
       if: env.isMainMerge == 'false'
       run: pnpm run test
