--- a/.github/workflows/pr-lint-build-test.yml
+++ b/.github/workflows/pr-lint-build-test.yml
@@ -51,6 +51,9 @@ jobs:
     - name: Lint
       if: env.isMainMerge == 'false'
       run: pnpm run lint
+    - name: Type-Check
+      if: env.isMainMerge == 'false'
+      run: pnpm run type-check
     - name: Build
       run: pnpm run build
     - name: Upload artifact
