--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"start": "node ./dist/index.js",
 		"test": "vitest run",
 		"test:watch": "vitest watch",
-		"type-check": "tsc --noEmit"
+		"type-check": "tsc --noEmit --incremental false"
 	},
 	"license": "MIT",
 	"packageManager": "pnpm@10.12.4",
