ci: improve pipeline
- Only run the Build command when merging to the main branch.

--- a/.github/workflows/pr-lint-build-test.yml
+++ b/.github/workflows/pr-lint-build-test.yml
@@ -55,6 +55,7 @@ jobs:
       if: env.isMainMerge == 'false'
       run: pnpm run type-check
     - name: Build
+      if: env.isMainMerge == 'true'
       run: pnpm run build
     - name: Upload artifact
       if: env.isMainMerge == 'true'
