--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"build": "tsc --build",
 		"format": "biome format",
 		"lint": "biome lint",
-		"lint:staged": "biome lint --staged",
+		"lint:staged": "biome lint --staged --no-errors-on-unmatched",
 		"postinstall": "git config core.hooksPath ./.githooks",
 		"prestart": "pnpm build",
 		"start": "node ./dist/index.js",
