--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
 		"build": "tsc --build",
 		"format": "biome format",
 		"lint": "biome lint",
-		"lint:staged": "biome lint --staged",
+		"lint:staged": "biome lint --staged --no-errors-on-unmatched",
 		"postinstall": "git config core.hooksPath ./.githooks",
 		"prestart": "pnpm build",
 		"start": "node ./dist/index.js",
 		"test": "vitest run",
 		"test:watch": "vitest watch",
-		"type-check": "tsc --noEmit"
+		"type-check": "tsc --noEmit --incremental false"
 	},
 	"license": "MIT",
 	"packageManager": "pnpm@10.12.4",
